more kind customisations

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
-ENVIRONMENT="dev"
+ENVIRONMENT="development"
