--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,38 @@
 # The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
-ENVIRONMENT="dev"
+ENVIRONMENT="development"
 
-# The secure key Craft will use for hashing and encrypting data
-SECURITY_KEY=""
+# What is the hostname, e.g.
+SITE_HOSTNAME="site.craft.localdev"
+
+# Should we force HTTPS?
+FORCE_SSL=0
+
+# Is the site live?
+CRAFT_LIVE=1
+
+# Is devMode enabled?
+CRAFT_DEBUG=1
+
+# Catch-all email address
+CRAFT_CATCH_ALL_EMAIL_ADDRESS="dev@madebykind.com"
+
+# Enable craft caching?
+CRAFT_CACHE_ENABLED=1
 
 # The database driver that will be used ('mysql' or 'pgsql')
 DB_DRIVER="mysql"
 
 # The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
-DB_SERVER="localhost"
+DATA_DB_HOST="localhost"
 
 # The database username to connect with
-DB_USER="root"
+DATA_DB_USER="nanobox"
 
 # The database password to connect with
-DB_PASSWORD=""
+DATA_DB_PASS=""
 
 # The name of the database to select
-DB_DATABASE=""
+DATA_DB_NAME="gonano"
 
 # The database schema that will be used (PostgreSQL only)
 DB_SCHEMA="public"
@@ -27,3 +42,6 @@ DB_TABLE_PREFIX=""
 
 # The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
 DB_PORT=""
+
+# The secure key Craft will use for hashing and encrypting data
+SECURITY_KEY=""
