--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
       "@php -r \"rename('composer.json.default', 'composer.json');\"",
       "@composer dump-autoload -o",
       "@php craft setup/welcome",
-      "@yarn",
+      "@yarn"
     ]
   }
 }
