--- a/.env.production.example
+++ b/.env.production.example
@@ -1,38 +1,38 @@
 # The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
-ENVIRONMENT="development"
+ENVIRONMENT="production"
 
 # What is the hostname, e.g.
 SITE_HOSTNAME="site.craft.localdev"
 
 # Should we force HTTPS?
-FORCE_SSL=0
+FORCE_SSL=1
 
 # Is the site live?
 CRAFT_LIVE=1
 
 # Is devMode enabled?
-CRAFT_DEBUG=1
+CRAFT_DEBUG=0
 
 # Catch-all email address
-CRAFT_CATCH_ALL_EMAIL_ADDRESS="dev@madebykind.com"
+# CRAFT_CATCH_ALL_EMAIL_ADDRESS="dev@madebykind.com"
 
 # Enable craft caching?
-CRAFT_CACHE_ENABLED=0
+CRAFT_CACHE_ENABLED=1
 
 # The database driver that will be used ('mysql' or 'pgsql')
 DB_DRIVER="mysql"
 
 # The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
-DATA_DB_HOST="localhost"
+DATA_DB_HOST=""
 
 # The database username to connect with
-DATA_DB_USER="nanobox"
+DATA_DB_USER=""
 
 # The database password to connect with
 DATA_DB_PASS=""
 
 # The name of the database to select
-DATA_DB_NAME="gonano"
+DATA_DB_NAME=""
 
 # The database schema that will be used (PostgreSQL only)
 DB_SCHEMA="public"
