--- a/.editorconfig
+++ b/.editorconfig
@@ -36,3 +36,11 @@ indent_style = tab
 [*.md]
 max_line_length = 0
 trim_trailing_whitespace = false
+
+[*.{js,jsx,ts,tsx,vue}]
+indent_style = space
+indent_size = 2
+end_of_line = lf
+trim_trailing_whitespace = true
+insert_final_newline = true
+max_line_length = 100
