--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-/.env
-/.idea
-/vendor
-.DS_Store
-
+# Craft
 /config/license.key
 
+
+# Dependencies
+/vendor
 node_modules/
-/dist
+
+# Build artefacts
+/web/dist/
 
 # local env files
+/.env
 .env.local
 .env.*.local
 
@@ -17,7 +19,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# Platform, editor directories and files
+.DS_Store
 .idea
 .vscode
 *.suo
