--- a/package.json
+++ b/package.json
@@ -4,34 +4,48 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "lint-autofix": "vue-cli-service lint --fix",
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^1.1.0",
+    "autoprefixer": "^9.4.7",
+    "cli-plugin-eslint": "^0.0.1",
+    "postcss-preset-env": "^6.5.0",
     "postcss-import": "^12.0.0",
     "tailwindcss": "^0.7.3",
     "vue": "^2.5.16"
   },
   "devDependencies": {
+    "@vue/babel-preset-app": "^3.4.0",
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-plugin-eslint": "^3.4.0",
+    "@vue/cli-plugin-unit-jest": "^3.4.0",
     "@vue/cli-service": "^3.0.0-rc.10",
+    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.8.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-vue": "^5.0.0",
     "glob-all": "^3.1.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "prettier": "^1.16.4",
     "purgecss-webpack-plugin": "^1.2.0",
     "purgecss-whitelister": "^2.1.0",
     "sane": "^3.0.0",
+    "svgo": "^1.1.0",
+    "svgo-loader": "^2.1.0",
+    "vue-cli-plugin-svg-sprite": "^0.3.1",
     "vue-template-compiler": "^2.5.16",
     "webpack-manifest-plugin": "^2.0.3"
-  },
-  "postcss": {
-    "plugins": {
-      "postcss-import": {},
-      "tailwindcss": "./tailwind.js",
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
