env and general config tidy

--- a/.env.example
+++ b/.env.example
@@ -1,47 +1,56 @@
-# The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
-ENVIRONMENT="development"
+###
+# BASIC
+###
 
+# The environment Craft is currently running in ('development | 'staging' | 'production')
+ENVIRONMENT="development"
 # What is the hostname, e.g.
 SITE_HOSTNAME="site.craft.localdev"
-
 # Should we force HTTPS?
 FORCE_SSL=0
 
-# Is the site live?
-CRAFT_LIVE=1
 
-# Is devMode enabled?
-CRAFT_DEBUG=1
-
-# Catch-all email address
-CRAFT_CATCH_ALL_EMAIL_ADDRESS="dev@madebykind.com"
-
-# Enable craft caching?
-CRAFT_CACHE_ENABLED=0
-
-# The database driver that will be used ('mysql' or 'pgsql')
-DB_DRIVER="mysql"
-
-# The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
-DATA_DB_HOST="localhost"
-
-# The database username to connect with
-DATA_DB_USER="nanobox"
-
-# The database password to connect with
-DATA_DB_PASS=""
-
-# The name of the database to select
-DATA_DB_NAME="gonano"
-
-# The database schema that will be used (PostgreSQL only)
-DB_SCHEMA="public"
-
-# The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
-DB_TABLE_PREFIX=""
-
-# The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
-DB_PORT=""
+###
+# COMMON
+#
+# These vars should be set to the same value across environments
+###
 
 # The secure key Craft will use for hashing and encrypting data
 SECURITY_KEY=""
+
+
+###
+# CRAFT
+###
+
+# Is the site live?
+CRAFT_LIVE=1
+# Is devMode enabled?
+CRAFT_DEBUG=1
+# Catch-all email address
+CRAFT_CATCH_ALL_EMAIL_ADDRESS="dev@madebykind.com"
+# Enable craft caching?
+CRAFT_CACHE_ENABLED=0
+
+
+###
+# DATABASE
+###
+
+# The database driver that will be used ('mysql' or 'pgsql')
+DB_DRIVER="mysql"
+# The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
+DATA_DB_HOST="localhost"
+# The database username to connect with
+DATA_DB_USER="nanobox"
+# The database password to connect with
+DATA_DB_PASS=""
+# The name of the database to select
+DATA_DB_NAME="gonano"
+# The database schema that will be used (PostgreSQL only)
+DB_SCHEMA="public"
+# The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
+DB_TABLE_PREFIX=""
+# The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
+DB_PORT=""
