--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 indent_style = space
-indent_size = 4
+indent_size = 2
 trim_trailing_whitespace = true
 
 # Matches multiple files with brace expansion notation
@@ -37,7 +37,7 @@ indent_style = tab
 max_line_length = 0
 trim_trailing_whitespace = false
 
-[*.{js,jsx,ts,tsx,vue}]
+[*.{js,jsx,ts,tsx,vue,json}]
 indent_style = space
 indent_size = 2
 end_of_line = lf
