--- a/package.json
+++ b/package.json
@@ -43,12 +43,16 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
+    "backstopjs": "^3.8.8",
+    "colors": "^1.3.3",
+    "commander": "^2.19.0",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.0.0",
     "glob-all": "^3.1.0",
     "hygen": "^2.1.2",
+    "inquirer": "^6.2.2",
     "mini-css-extract-plugin": "^0.4.1",
     "prettier": "^1.16.4",
     "prettier-stylelint": "^0.4.2",
