--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "lint": "vue-cli-service lint",
     "lint-autofix": "vue-cli-service lint --fix",
-    "serve": "vue-cli-service serve",
+    "serve": "concurrently \"vue-cli-service serve\" \"fractal start\"",
     "test:unit": "vue-cli-service test:unit",
     "test:watch": "vue-cli-service test:unit --watch",
     "test:coverage": "jest --coverage"
@@ -25,6 +25,8 @@
     "@fullhuman/postcss-purgecss": "^1.1.0",
     "autoprefixer": "^9.4.7",
     "cli-plugin-eslint": "^0.0.1",
+    "colors": "^1.3.3",
+    "concurrently": "^4.1.0",
     "postcss-import": "^12.0.0",
     "postcss-preset-env": "^6.5.0",
     "tailwindcss": "^0.7.3",
@@ -44,7 +46,6 @@
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "backstopjs": "^3.8.8",
-    "colors": "^1.3.3",
     "commander": "^2.19.0",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^4.0.0",
@@ -53,6 +54,7 @@
     "glob-all": "^3.1.0",
     "hygen": "^2.1.2",
     "inquirer": "^6.2.2",
+    "jsonfile": "^5.0.0",
     "mini-css-extract-plugin": "^0.4.1",
     "prettier": "^1.16.4",
     "prettier-stylelint": "^0.4.2",
@@ -64,5 +66,13 @@
     "vue-cli-plugin-svg-sprite": "^0.3.1",
     "vue-template-compiler": "^2.5.16",
     "webpack-manifest-plugin": "^2.0.3"
+  },
+  "kindConfig": {
+    "title": "dfgdsfgsdfg",
+    "craftDomain": "dfgdsfgsdfg.craft.localdev",
+    "ports": {
+      "assets": 8846,
+      "fractal": 4936
+    }
   }
 }
