--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,7 @@
       "@php -r \"unlink('README.md');\"",
       "@php -r \"rename('composer.json.default', 'composer.json');\"",
       "@composer dump-autoload -o",
-      "@php craft setup/welcome",
+      "@php craft setup/welcome"
     ]
   }
 }
