--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build && fractal build",
     "build:fractal": "fractal build",
     "build:components": "fractal pathmap",
-    "new:component": "hygen fractal-component",
+    "generate:component": "hygen fractal-component new",
     "dev": "vue-cli-service serve",
     "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "lint": "vue-cli-service lint",
@@ -65,6 +65,7 @@
     "sane": "^3.0.0",
     "svgo": "^1.1.0",
     "svgo-loader": "^2.1.0",
+    "twig": "^1.13.2",
     "vue-cli-plugin-svg-sprite": "^0.3.1",
     "vue-template-compiler": "^2.5.16",
     "webpack-manifest-plugin": "^2.0.3"
