--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "test:watch": "vue-cli-service test:unit --watch",
     "test:coverage": "jest --coverage"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint-autofix",
+      "pre-push": "yarn lint"
+    }
+  },
   "dependencies": {
     "@babel/core": "^7.0.0-0",
     "@frctl/fractal": "^1.1.7",
@@ -27,6 +33,7 @@
     "cli-plugin-eslint": "^0.0.1",
     "colors": "^1.3.3",
     "concurrently": "^4.1.0",
+    "dotenv": "^6.2.0",
     "postcss-import": "^12.0.0",
     "postcss-preset-env": "^6.5.0",
     "tailwindcss": "^0.7.3",
@@ -47,12 +54,12 @@
     "babel-preset-env": "^1.7.0",
     "backstopjs": "^3.8.8",
     "commander": "^2.19.0",
-    "dotenv": "^6.2.0",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.0.0",
     "glob-all": "^3.1.0",
+    "husky": "^1.3.1",
     "hygen": "^2.1.2",
     "inquirer": "^6.2.2",
     "jsonfile": "^5.0.0",
@@ -60,7 +67,6 @@
     "postcss-nested": "^4.1.2",
     "prettier": "^1.16.4",
     "prettier-stylelint": "^0.4.2",
-    "purgecss-webpack-plugin": "^1.2.0",
     "purgecss-whitelister": "^2.1.0",
     "sane": "^3.0.0",
     "svgo": "^1.1.0",
