--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "yarn lint-autofix",
-      "pre-push": "yarn lint"
+      "pre-push": "yarn lint && yarn test:unit"
     }
   },
   "dependencies": {
