--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "vue-cli-service lint",
     "lint:autofix": "vue-cli-service lint --fix",
     "lint:config-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "project:release": "./scripts/deploy/release",
     "project:configure": "./scripts/project/configure",
     "project:after-install": "./scripts/project/after-install",
     "project:apply-env": "./scripts/project/apply-env",
