--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint",
+      "pre-commit": "lint-staged",
       "pre-push": "yarn test:unit"
     }
   },
@@ -74,6 +74,7 @@
     "husky": "^1.3.1",
     "hygen": "^2.1.2",
     "inquirer": "^6.2.2",
+    "lint-staged": ">=8",
     "mini-css-extract-plugin": "^0.4.1",
     "postcss-nested": "^4.1.2",
     "prettier": "^1.16.4",
@@ -87,5 +88,15 @@
     "vue-cli-plugin-svg-sprite": "^0.3.1",
     "vue-template-compiler": "^2.5.16",
     "webpack-manifest-plugin": "^2.0.3"
+  },
+  "lint-staged": {
+    "*.{js,vue}": [
+      "yarn lint:js",
+      "git add"
+    ],
+    "*.postcss": [
+      "yarn lint:styles",
+      "git add"
+    ]
   }
 }
