--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "dotenv": "^6.2.0",
     "ip": "^1.1.5",
     "jsonfile": "^5.0.0",
-    "postcss-import": "^12.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-import-resolver": "^1.2.2",
     "postcss-preset-env": "^6.5.0",
     "postcss-reporter": "^6.0.1",
     "tailwindcss": "^0.7.3",
