--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "inquirer": "^6.2.2",
     "lint-staged": ">=8",
     "mini-css-extract-plugin": "^0.4.1",
+    "postcss-assets": "^5.0.0",
     "postcss-nested": "^4.1.2",
     "prettier": "^1.16.4",
     "prettier-stylelint": "^0.4.2",
