--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "purgecss-whitelister": "^2.1.0",
     "randomatic": "^3.1.1",
     "sane": "^3.0.0",
+    "stylelint-config-idiomatic-order": "^7.0.0",
+    "stylelint-config-standard": "^18.3.0",
     "svgo": "^1.1.0",
     "svgo-loader": "^2.1.0",
     "twig": "^1.13.2",
