make svg sprites work

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss-import-resolver": "^1.2.2",
     "postcss-preset-env": "^6.5.0",
     "postcss-reporter": "^6.0.1",
+    "svg4everybody": "^2.1.9",
     "tailwindcss": "^0.7.3",
     "vue": "^2.5.16",
     "webpack": "^4.4.0"
