--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "postcss-nested": "^4.1.2",
     "prettier": "^1.16.4",
     "prettier-stylelint": "^0.4.2",
+    "purgecss": "^1.3.0",
     "purgecss-whitelister": "^2.1.0",
     "randomatic": "^3.1.1",
     "sane": "^3.0.0",
