--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
   ],
   "require": {
     "craftcms/cms": "^3.1.0",
+    "am-impact/amcommand": "^3.1",
     "vlucas/phpdotenv": "^2.4.0",
     "clubstudioltd/craft-asset-rev": "^v6.0.1",
     "ournameismud/fractal": "dev-master"
