--- a/package.json
+++ b/package.json
@@ -41,15 +41,16 @@
     "cli-plugin-eslint": "^0.0.1",
     "colors": "^1.3.3",
     "concurrently": "^4.1.0",
-    "dotenv": "^6.2.0",
+    "dotenv": "^8.0.0",
     "ip": "^1.1.5",
     "jsonfile": "^5.0.0",
     "postcss-import": "^12.0.1",
     "postcss-import-resolver": "^1.2.2",
     "postcss-preset-env": "^6.5.0",
     "postcss-reporter": "^6.0.1",
+    "stylelint": "^10.1.0",
     "svg4everybody": "^2.1.9",
-    "tailwindcss": "^0.7.3",
+    "tailwindcss": "^1.0.6",
     "vue": "^2.5.16",
     "webpack": "^4.4.0"
   },
@@ -64,20 +65,20 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.7.0",
-    "backstopjs": "^3.8.8",
     "commander": "^2.19.0",
-    "eslint": "^5.8.0",
-    "eslint-config-prettier": "^4.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.0.0",
     "glob-all": "^3.1.0",
-    "husky": "^1.3.1",
-    "hygen": "^2.1.2",
+    "husky": "^3.0.2",
+    "hygen": "^4.0.7",
     "inquirer": "^6.2.2",
     "lint-staged": ">=8",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.8.0",
     "postcss-assets": "^5.0.0",
     "postcss-nested": "^4.1.2",
     "prettier": "^1.16.4",
@@ -85,13 +86,13 @@
     "purgecss": "^1.3.0",
     "purgecss-whitelister": "^2.1.0",
     "randomatic": "^3.1.1",
-    "sane": "^3.0.0",
+    "sane": "^4.1.0",
     "stylelint-config-idiomatic-order": "^7.0.0",
     "stylelint-config-standard": "^18.3.0",
     "svgo": "^1.1.0",
     "svgo-loader": "^2.1.0",
     "twig": "^1.13.2",
-    "vue-cli-plugin-svg-sprite": "^0.3.1",
+    "vue-cli-plugin-svg-sprite": "^1.0.0",
     "vue-template-compiler": "^2.5.16",
     "webpack-manifest-plugin": "^2.0.3"
   },
