update to latest standards

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 
 # The environment Craft is currently running in ('development | 'staging' | 'production')
 ENVIRONMENT="development"
+# ENVIRONMENT="production"
+
+# Are we using webpack devserver for assets?  ('development | 'production')
+ASSET_MODE="development"
 # Should we force HTTPS?
 FORCE_SSL=0
 
@@ -19,6 +23,14 @@ SECURITY_KEY=""
 
 
 ###
+# EMAIL
+#
+###
+SYSTEM_EMAIL_ADDRESS=dev@madebykind.com
+POSTMARK_SERVER_TOKEN=
+
+
+###
 # CRAFT
 ###
 
@@ -31,6 +43,13 @@ CRAFT_CATCH_ALL_EMAIL_ADDRESS="dev@madebykind.com"
 # Enable craft caching?
 CRAFT_CACHE_ENABLED=0
 
+CRAFT_ASSET_S3_KEY=
+CRAFT_ASSET_S3_SECRET=
+CRAFT_ASSET_BASE_URL=
+CRAFT_ASSET_CLOUDFRONT_DISTRIBUTION_ID=
+
+IMGIX_HOSTNAME=hostname.imgix.net
+IMGIX_SIGN_KEY=
 
 ###
 # DATABASE
@@ -52,3 +71,4 @@ DB_SCHEMA="public"
 DB_TABLE_PREFIX=""
 # The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
 DB_PORT=""
+
