--- a/package.json
+++ b/package.json
@@ -1,100 +1,102 @@
 {
   "name": "craft-vue-tailwind",
-  "title": "Craft Vue Tailwind",
   "version": "3.3.1",
   "private": true,
   "scripts": {
+    "serve": "concurrently \"vue-cli-service serve\" \"fractal start\"",
     "build": "vue-cli-service build && fractal build && yarn build:components",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "concurrently \"vue-cli-service lint --fix && vue-cli-service lint:style\"",
     "build:components": "fractal pathmap",
     "build:fractal": "fractal build",
     "generate:component": "hygen fractal-component new",
-    "lint": "concurrently \"vue-cli-service lint --fix && vue-cli-service lint:style\"",
+    "lint:config-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "lint:js": "vue-cli-service lint --fix",
     "lint:styles": "vue-cli-service lint:style",
-    "lint:config-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
-    "project:release": "./scripts/deploy/release",
-    "project:configure": "./scripts/project/configure",
     "project:after-install": "./scripts/project/after-install",
     "project:apply-env": "./scripts/project/apply-env",
+    "project:configure": "./scripts/project/configure",
+    "project:release": "./scripts/deploy/release",
     "project:setup-craft": "./scripts/project/setup-craft",
-    "serve": "concurrently \"vue-cli-service serve\" \"fractal start\"",
     "serve:assets": "vue-cli-service serve",
     "serve:craft": "nanobox run php-server",
     "serve:fractal": "fractal start",
     "test:coverage": "jest --coverage",
-    "test:unit": "vue-cli-service test:unit",
     "test:watch": "vue-cli-service test:unit --watch"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "yarn test:unit"
-    }
-  },
   "dependencies": {
+    "core-js": "^3.4.3",
+    "svg4everybody": "^2.1.9",
+    "tailwindcss": "^1.0.6",
+    "vue": "^2.5.16"
+  },
+  "devDependencies": {
+    "@ascendancyy/vue-cli-plugin-stylelint": "^1.1.2",
     "@babel/core": "^7.0.0-0",
     "@frctl/fractal": "^1.1.7",
     "@frctl/mandelbrot": "^1.2.0",
     "@frctl/twig": "^1.0.0-beta.5",
     "@fullhuman/postcss-purgecss": "^1.1.0",
-    "autoprefixer": "^9.4.7",
-    "cli-plugin-eslint": "^0.0.1",
-    "colors": "^1.3.3",
-    "concurrently": "^4.1.0",
-    "dotenv": "^8.0.0",
-    "ip": "^1.1.5",
-    "jsonfile": "^5.0.0",
-    "postcss-import": "^12.0.1",
-    "postcss-import-resolver": "^1.2.2",
-    "postcss-preset-env": "^6.5.0",
-    "postcss-reporter": "^6.0.1",
-    "stylelint": "^10.1.0",
-    "svg4everybody": "^2.1.9",
-    "tailwindcss": "^1.0.6",
-    "vue": "^2.5.16",
-    "webpack": "^4.4.0"
-  },
-  "devDependencies": {
-    "@ascendancyy/vue-cli-plugin-stylelint": "^1.1.2",
-    "@vue/babel-preset-app": "^3.4.0",
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-unit-jest": "^3.4.0",
-    "@vue/cli-service": "^3.0.0-rc.10",
-    "@vue/eslint-config-airbnb": "^4.0.0",
+    "@vue/babel-preset-app": "^4.1.1",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-plugin-unit-jest": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
+    "@vue/eslint-config-airbnb": "^5.0.0",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "autoprefixer": "^9.4.7",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.7.0",
-    "commander": "^2.19.0",
+    "case": "^1.6.2",
+    "cli-plugin-eslint": "^0.0.1",
+    "colors": "^1.3.3",
+    "concurrently": "^5.0.0",
     "copy-webpack-plugin": "^5.0.4",
+    "dotenv": "^8.0.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.0.0",
     "glob-all": "^3.1.0",
     "husky": "^3.0.2",
-    "hygen": "^4.0.7",
-    "inquirer": "^6.2.2",
+    "hygen": "^5.0.3",
+    "inquirer": "^7.0",
+    "ip": "^1.1.5",
+    "jsonfile": "^5.0.0",
+    "kewler": "^1.0.8",
     "lint-staged": ">=8",
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-assets": "^5.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-import-resolver": "^2.0.0",
     "postcss-nested": "^4.1.2",
+    "postcss-preset-env": "^6.5.0",
+    "postcss-reporter": "^6.0.1",
     "prettier": "^1.16.4",
     "prettier-stylelint": "^0.4.2",
     "purgecss": "^1.3.0",
     "purgecss-whitelister": "^2.1.0",
     "randomatic": "^3.1.1",
     "sane": "^4.1.0",
-    "stylelint-config-idiomatic-order": "^7.0.0",
-    "stylelint-config-standard": "^18.3.0",
+    "shelljs": "^0.8.3",
+    "stylelint": "^12.0.0",
+    "stylelint-config-idiomatic-order": "^8.1.0",
+    "stylelint-config-standard": "^19.0.0",
     "svgo": "^1.1.0",
     "svgo-loader": "^2.1.0",
     "twig": "^1.13.2",
     "vue-cli-plugin-svg-sprite": "^1.0.0",
     "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.4.0",
     "webpack-manifest-plugin": "^2.0.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn test:unit"
+    }
   },
   "lint-staged": {
     "*.{js,vue}": [
@@ -105,5 +107,6 @@
       "yarn lint:styles",
       "git add"
     ]
-  }
+  },
+  "title": "Craft Vue Tailwind"
 }
